*)rename the application package

--- a/five_chess/.project
+++ b/five_chess/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>five_chess</name>
+	<name>FiveChess</name>
 	<comment></comment>
 	<projects>
 	</projects>
