--- a/FiveChessTest/.classpath
+++ b/FiveChessTest/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="lib/robotium-solo-5.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry exported="true" kind="lib" path="lib/robotium-solo-5.1.jar" sourcepath="E:/JAVA and Android/Robotium/robotium-master.zip"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
