--- a/FiveChessTest/AndroidManifest.xml
+++ b/FiveChessTest/AndroidManifest.xml
@@ -4,11 +4,18 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="15" />
+    <uses-sdk 
+        android:minSdkVersion="15" 
+        android:targetSdkVersion="19" 
+        android:maxSdkVersion="19"/>
 
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
         android:targetPackage="com.wmadcc.five_chess" />
+    
+    <uses-permission 
+        android:maxSdkVersion="19" 
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:icon="@drawable/ic_launcher"
