--- a/FiveChessTest/.classpath
+++ b/FiveChessTest/.classpath
@@ -7,6 +7,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry exported="true" kind="lib" path="lib/robotium-solo-5.1.jar" sourcepath="E:/JAVA and Android/Robotium/robotium-master.zip"/>
+	<classpathentry exported="true" kind="lib" path="libs/robotium-solo-5.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
